[package]
name = "dioxus-input-error"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.2.4", features = ["web", "fermi"] }
log = "0.4"
wasm-logger = "0.2.0"
wasm-bindgen = "0.2"

web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "DomRect",
]}